-
Bug
-
-
Major
-
Resolution:
Fixed
-
5.5(EOL), 10.0(EOL), 10.1(EOL), 10.2(EOL), 10.3(EOL)
-
-
-
This query returns bad results:
SELECT
|
GREATEST('2010-01-01 10:10:10',TIME('-20:20:20')),
|
GREATEST('2010-01-01 10:10:10',TIME('20:20:20')),
|
LEAST('2010-01-01 10:10:10',TIME('-20:20:20')),
|
LEAST('2010-01-01 10:10:10',TIME('20:20:20'))\G
|
GREATEST('2010-01-01 10:10:10',TIME('-20:20:20')): 802:10:10.000000
|
GREATEST('2010-01-01 10:10:10',TIME('20:20:20')): 802:10:10.000000
|
LEAST('2010-01-01 10:10:10',TIME('-20:20:20')): -20:20:20.000000
|
LEAST('2010-01-01 10:10:10',TIME('20:20:20')): 20:20:20.000000
|
Implicit conversion from the string literal '2010-01-01 10:10:10' to TIME does not seem to work well inside LEAST/GREATEST.
The expected behavior would be to return results similar to this query (with explicit CAST added around the string):
SELECT
|
GREATEST(CAST('2010-01-01 10:10:10' AS TIME(6)),TIME('-20:20:20')),
|
GREATEST(CAST('2010-01-01 10:10:10' AS TIME(6)),TIME('20:20:20')),
|
LEAST(CAST('2010-01-01 10:10:10' AS TIME(6)),TIME('-20:20:20')),
|
LEAST(CAST('2010-01-01 10:10:10' AS TIME(6)),TIME('20:20:20'))\G
|
GREATEST(CAST('2010-01-01 10:10:10' AS TIME(6)),TIME('-20:20:20')): 10:10:10.000000
|
GREATEST(CAST('2010-01-01 10:10:10' AS TIME(6)),TIME('20:20:20')): 20:20:20.000000
|
LEAST(CAST('2010-01-01 10:10:10' AS TIME(6)),TIME('-20:20:20')): -20:20:20.000000
|
LEAST(CAST('2010-01-01 10:10:10' AS TIME(6)),TIME('20:20:20')): 10:10:10.000000
|
- blocks
-
MDEV-8894
Inserting fractional seconds into MySQL 5.6 master breaks consistency on MariaDB 10 slave
-
-
Closed
Transition |
Time In Source Status |
Execution Times |
Open |
|
In Progress |
|
7h 21m
|
1
|
In Progress |
|
Closed |
|
24s
|
1
|
{"report":{"fcp":852.5,"ttfb":205.90000009536743,"pageVisibility":"visible","entityId":65841,"key":"jira.project.issue.view-issue","isInitial":true,"threshold":1000,"elementTimings":{},"userDeviceMemory":8,"userDeviceProcessors":64,"apdex":1,"journeyId":"a6a4f4c9-7127-4c57-a88c-6999894ac02c","navigationType":0,"readyForUser":932.0999999046326,"redirectCount":0,"resourceLoadedEnd":987.5,"resourceLoadedStart":211.19999980926514,"resourceTiming":[{"duration":150.59999990463257,"initiatorType":"link","name":"https://jira.mariadb.org/s/2c21342762a6a02add1c328bed317ffd-CDN/lu2cib/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/css/_super/batch.css","startTime":211.19999980926514,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":211.19999980926514,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":361.7999997138977,"responseStart":0,"secureConnectionStart":0},{"duration":150.5,"initiatorType":"link","name":"https://jira.mariadb.org/s/7ebd35e77e471bc30ff0eba799ebc151-CDN/lu2cib/820016/12ta74/494e4c556ecbb29f90a3d3b4f09cb99c/_/download/contextbatch/css/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.css?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true&whisper-enabled=true","startTime":211.59999990463257,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":211.59999990463257,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":362.09999990463257,"responseStart":0,"secureConnectionStart":0},{"duration":159.30000019073486,"initiatorType":"script","name":"https://jira.mariadb.org/s/0917945aaa57108d00c5076fea35e069-CDN/lu2cib/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/js/_super/batch.js?locale=en","startTime":211.7999997138977,"connectEnd":211.7999997138977,"connectStart":211.7999997138977,"domainLookupEnd":211.7999997138977,"domainLookupStart":211.7999997138977,"fetchStart":211.7999997138977,"redirectEnd":0,"redirectStart":0,"requestStart":211.7999997138977,"responseEnd":371.09999990463257,"responseStart":371.09999990463257,"secureConnectionStart":211.7999997138977},{"duration":284.5,"initiatorType":"script","name":"https://jira.mariadb.org/s/2d8175ec2fa4c816e8023260bd8c1786-CDN/lu2cib/820016/12ta74/494e4c556ecbb29f90a3d3b4f09cb99c/_/download/contextbatch/js/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.js?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&locale=en&slack-enabled=true&whisper-enabled=true","startTime":211.90000009536743,"connectEnd":211.90000009536743,"connectStart":211.90000009536743,"domainLookupEnd":211.90000009536743,"domainLookupStart":211.90000009536743,"fetchStart":211.90000009536743,"redirectEnd":0,"redirectStart":0,"requestStart":211.90000009536743,"responseEnd":496.40000009536743,"responseStart":496.40000009536743,"secureConnectionStart":211.90000009536743},{"duration":288.7000002861023,"initiatorType":"script","name":"https://jira.mariadb.org/s/a9324d6758d385eb45c462685ad88f1d-CDN/lu2cib/820016/12ta74/c92c0caa9a024ae85b0ebdbed7fb4bd7/_/download/contextbatch/js/atl.global,-_super/batch.js?locale=en","startTime":212.19999980926514,"connectEnd":212.19999980926514,"connectStart":212.19999980926514,"domainLookupEnd":212.19999980926514,"domainLookupStart":212.19999980926514,"fetchStart":212.19999980926514,"redirectEnd":0,"redirectStart":0,"requestStart":212.19999980926514,"responseEnd":500.90000009536743,"responseStart":500.90000009536743,"secureConnectionStart":212.19999980926514},{"duration":289.1000003814697,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2cib/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-en/jira.webresources:calendar-en.js","startTime":212.2999997138977,"connectEnd":212.2999997138977,"connectStart":212.2999997138977,"domainLookupEnd":212.2999997138977,"domainLookupStart":212.2999997138977,"fetchStart":212.2999997138977,"redirectEnd":0,"redirectStart":0,"requestStart":212.2999997138977,"responseEnd":501.40000009536743,"responseStart":501.40000009536743,"secureConnectionStart":212.2999997138977},{"duration":289.19999980926514,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2cib/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-localisation-moment/jira.webresources:calendar-localisation-moment.js","startTime":212.5,"connectEnd":212.5,"connectStart":212.5,"domainLookupEnd":212.5,"domainLookupStart":212.5,"fetchStart":212.5,"redirectEnd":0,"redirectStart":0,"requestStart":212.5,"responseEnd":501.69999980926514,"responseStart":501.69999980926514,"secureConnectionStart":212.5},{"duration":302.7000002861023,"initiatorType":"link","name":"https://jira.mariadb.org/s/b04b06a02d1959df322d9cded3aeecc1-CDN/lu2cib/820016/12ta74/a2ff6aa845ffc9a1d22fe23d9ee791fc/_/download/contextbatch/css/jira.global.look-and-feel,-_super/batch.css","startTime":212.69999980926514,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":212.69999980926514,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":515.4000000953674,"responseStart":0,"secureConnectionStart":0},{"duration":289.2999997138977,"initiatorType":"script","name":"https://jira.mariadb.org/rest/api/1.0/shortcuts/820016/47140b6e0a9bc2e4913da06536125810/shortcuts.js?context=issuenavigation&context=issueaction","startTime":212.90000009536743,"connectEnd":212.90000009536743,"connectStart":212.90000009536743,"domainLookupEnd":212.90000009536743,"domainLookupStart":212.90000009536743,"fetchStart":212.90000009536743,"redirectEnd":0,"redirectStart":0,"requestStart":212.90000009536743,"responseEnd":502.19999980926514,"responseStart":502.19999980926514,"secureConnectionStart":212.90000009536743},{"duration":302.5,"initiatorType":"link","name":"https://jira.mariadb.org/s/3ac36323ba5e4eb0af2aa7ac7211b4bb-CDN/lu2cib/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/css/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.css?jira.create.linked.issue=true","startTime":213,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":213,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":515.5,"responseStart":0,"secureConnectionStart":0},{"duration":289.5,"initiatorType":"script","name":"https://jira.mariadb.org/s/5d5e8fe91fbc506585e83ea3b62ccc4b-CDN/lu2cib/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/js/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.js?jira.create.linked.issue=true&locale=en","startTime":213.19999980926514,"connectEnd":213.19999980926514,"connectStart":213.19999980926514,"domainLookupEnd":213.19999980926514,"domainLookupStart":213.19999980926514,"fetchStart":213.19999980926514,"redirectEnd":0,"redirectStart":0,"requestStart":213.19999980926514,"responseEnd":502.69999980926514,"responseStart":502.69999980926514,"secureConnectionStart":213.19999980926514},{"duration":490,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2cib/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-js/jira.webresources:bigpipe-js.js","startTime":218.40000009536743,"connectEnd":218.40000009536743,"connectStart":218.40000009536743,"domainLookupEnd":218.40000009536743,"domainLookupStart":218.40000009536743,"fetchStart":218.40000009536743,"redirectEnd":0,"redirectStart":0,"requestStart":218.40000009536743,"responseEnd":708.4000000953674,"responseStart":708.4000000953674,"secureConnectionStart":218.40000009536743},{"duration":722,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2cib/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-init/jira.webresources:bigpipe-init.js","startTime":218.40000009536743,"connectEnd":218.40000009536743,"connectStart":218.40000009536743,"domainLookupEnd":218.40000009536743,"domainLookupStart":218.40000009536743,"fetchStart":218.40000009536743,"redirectEnd":0,"redirectStart":0,"requestStart":218.40000009536743,"responseEnd":940.4000000953674,"responseStart":940.4000000953674,"secureConnectionStart":218.40000009536743},{"duration":182.30000019073486,"initiatorType":"xmlhttprequest","name":"https://jira.mariadb.org/rest/webResources/1.0/resources","startTime":527.2999997138977,"connectEnd":527.2999997138977,"connectStart":527.2999997138977,"domainLookupEnd":527.2999997138977,"domainLookupStart":527.2999997138977,"fetchStart":527.2999997138977,"redirectEnd":0,"redirectStart":0,"requestStart":527.2999997138977,"responseEnd":709.5999999046326,"responseStart":709.5999999046326,"secureConnectionStart":527.2999997138977},{"duration":171.90000009536743,"initiatorType":"link","name":"https://jira.mariadb.org/s/d5715adaadd168a9002b108b2b039b50-CDN/lu2cib/820016/12ta74/be4b45e9cec53099498fa61c8b7acba4/_/download/contextbatch/css/jira.project.sidebar,-_super,-project.issue.navigator,-jira.general,-jira.browse.project,-jira.view.issue,-jira.global,-atl.general,-com.atlassian.jira.projects.sidebar.init/batch.css?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true&whisper-enabled=true","startTime":789.7999997138977,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":789.7999997138977,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":961.6999998092651,"responseStart":0,"secureConnectionStart":0},{"duration":190.80000019073486,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2cib/820016/12ta74/e65b778d185daf5aee24936755b43da6/_/download/contextbatch/js/browser-metrics-plugin.contrib,-_super,-project.issue.navigator,-jira.view.issue,-atl.general/batch.js?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true&whisper-enabled=true","startTime":790.6999998092651,"connectEnd":790.6999998092651,"connectStart":790.6999998092651,"domainLookupEnd":790.6999998092651,"domainLookupStart":790.6999998092651,"fetchStart":790.6999998092651,"redirectEnd":0,"redirectStart":0,"requestStart":790.6999998092651,"responseEnd":981.5,"responseStart":981.5,"secureConnectionStart":790.6999998092651},{"duration":196.5,"initiatorType":"script","name":"https://jira.mariadb.org/s/097ae97cb8fbec7d6ea4bbb1f26955b9-CDN/lu2cib/820016/12ta74/be4b45e9cec53099498fa61c8b7acba4/_/download/contextbatch/js/jira.project.sidebar,-_super,-project.issue.navigator,-jira.general,-jira.browse.project,-jira.view.issue,-jira.global,-atl.general,-com.atlassian.jira.projects.sidebar.init/batch.js?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&locale=en&slack-enabled=true&whisper-enabled=true","startTime":791,"connectEnd":791,"connectStart":791,"domainLookupEnd":791,"domainLookupStart":791,"fetchStart":791,"redirectEnd":0,"redirectStart":0,"requestStart":791,"responseEnd":987.5,"responseStart":987.5,"secureConnectionStart":791},{"duration":239.30000019073486,"initiatorType":"script","name":"https://www.google-analytics.com/analytics.js","startTime":845.0999999046326,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":845.0999999046326,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":1084.4000000953674,"responseStart":0,"secureConnectionStart":0}],"fetchStart":0,"domainLookupStart":0,"domainLookupEnd":0,"connectStart":0,"connectEnd":0,"requestStart":46,"responseStart":206,"responseEnd":212,"domLoading":209,"domInteractive":1036,"domContentLoadedEventStart":1036,"domContentLoadedEventEnd":1078,"domComplete":1361,"loadEventStart":1361,"loadEventEnd":1362,"userAgent":"Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko; compatible; ClaudeBot/1.0; +claudebot@anthropic.com)","marks":[{"name":"bigPipe.sidebar-id.start","time":1018.9000000953674},{"name":"bigPipe.sidebar-id.end","time":1019.9000000953674},{"name":"bigPipe.activity-panel-pipe-id.start","time":1020.0999999046326},{"name":"bigPipe.activity-panel-pipe-id.end","time":1021.0999999046326},{"name":"activityTabFullyLoaded","time":1094.1999998092651}],"measures":[],"correlationId":"aa6a315fbf8f19","effectiveType":"4g","downlink":9.4,"rtt":0,"serverDuration":98,"dbReadsTimeInMs":14,"dbConnsTimeInMs":22,"applicationHash":"9d11dbea5f4be3d4cc21f03a88dd11d8c8687422","experiments":[]}}