MDEV-15287 Bad result for LEAST/GREATEST(datetime_alike_string, time)